# master_thesis

./: CMakeLists.txt  README.md  package.xml
doc/: .gitignore  main.aux  main.bbl  main.blg  main.fdb_latexmk  main.fls  main.glo  main.ist  main.out  main.tex  main.toc  references.bib  thesis.tex
doc/_minted-thesis/: 63CFEB463F793A904FF55CBDACBFCBBE0102E502927AACB428B4F294F23E2359.pygtex  AFA60DE5FC2A58D7C74C5BEE749CCC3F0102E502927AACB428B4F294F23E2359.pygtex  E1B3BE07818454D8A6F2FECC83E95BB70102E502927AACB428B4F294F23E2359.pygtex
doc/auxiliary_files/: backmatter.tex  frontmatter.tex  preamble.tex
doc/chapters/: 1_introduction.tex  2_grundlagen.tex  3_konzeption.tex  4_simulation.tex  4_umsetzung.tex  5_erprobung.tex  glossar.tex  literature.bib  versicherung.tex
doc/logos/: host_w_claim.eps  host_wo_claim.eps  siv.eps
doc/preliminary/: abkuerzungsverzeichnis.tex  glossar.tex
launch/: master_thesis_scenario_1.launch
models/turtlebot3_autorace/course/materials/scripts/: course.material
thesis_camera/: CMakeLists.txt  package.xml  setup.py
thesis_camera/cfg/: ImageCompensationParams.cfg  ImageProjectionParams.cfg
thesis_camera/launch/: extrinsic_camera_calibration.launch  intrinsic_camera_calibration.launch
thesis_camera/nodes/: image_compensation  image_projection
thesis_control/: CMakeLists.txt  package.xml  setup.py
thesis_control/launch/: thesis_control_crossing.launch  thesis_control_lane.launch  thesis_control_traffic.launch
thesis_control/nodes/: control_crossing  control_lane  control_traffic
thesis_core/: CMakeLists.txt  package.xml  setup.py
thesis_core/launch/: core.launch
thesis_core/nodes/: core_mode_decider  core_node_controller
thesis_detect/: CMakeLists.txt  package.xml  setup.py
thesis_detect/cfg/: DetectLaneParams.cfg  DetectLevelParams.cfg  DetectTrafficLightParams.cfg
thesis_detect/launch/: detect_crossing.launch  detect_lane.launch  detect_traffic.launch  detect_traffic_light.launch
thesis_detect/msg/: CrossingData.msg  CrossingDataArray.msg  DetectCollision.msg  DetectTrafficPosition.msg
thesis_detect/nodes/: detect_crossing  detect_lane  detect_traffic  detect_traffic_light
thesis_detect/src/thesis_detect/: collision_enum.py  cv_util.py  math_util.py
thesis_sim/: CMakeLists.txt  package.xml
thesis_sim/launch/: master_thesis_scenario_1.launch
thesis_sim/worlds/: turtlebot3_autorace.world
